medium breakpoint alignment fix for link roundups

--- a/less/cards/link-roundup-card.less
+++ b/less/cards/link-roundup-card.less
@@ -1,6 +1,14 @@
 //link roundup card
 
-.link-roundup {
+.card.link-roundup {
+
+    .full-block {
+        .full-block-cell {
+            @media @screen-small-above {
+                vertical-align: top;
+            }
+        }
+    }
 
     header {
         .background-size(cover);
